VC9/scanners.c
/* Generated by re2c 0.14.3 */
#include <stdlib.h>
#include "chunk.h"
#include "scanners.h"

bufsize_t _scan_at(bufsize_t (*scanner)(const unsigned char *), cmark_chunk *c,
                   bufsize_t offset) {
  bufsize_t res;
  unsigned char *ptr = (unsigned char *)c->data;
  unsigned char lim = ptr[c->len];

  ptr[c->len] = '\0';
  res = scanner(ptr + offset);
  ptr[c->len] = lim;

  return res;
}

// Try to match a scheme including colon.
bufsize_t _scan_scheme(const unsigned char *p) {
  const unsigned char *marker = NULL;
  const unsigned char *start = p;

  {
#if 0
    unsigned char yych;

    yych = *(marker = p);
    if (yych <= 'c') {
      if (yych <= 'M') {
        if (yych <= 'E') {
          if (yych <= 'A') {
            if (yych == '\n')
              goto yy2;
            if (yych <= '@')
              goto yy29;
            goto yy6;
          } else {
            if (yych <= 'B')
              goto yy24;
            if (yych <= 'C')
              goto yy3;
            if (yych <= 'D')
              goto yy4;
            goto yy25;
          }
        } else {
          if (yych <= 'I') {
            if (yych <= 'F')
              goto yy7;
            if (yych <= 'G')
              goto yy8;
            if (yych <= 'H')
              goto yy9;
            goto yy10;
          } else {
            if (yych <= 'J')
              goto yy5;
            if (yych <= 'K')
              goto yy26;
            if (yych <= 'L')
              goto yy11;
            goto yy12;
          }
        }
      } else {
        if (yych <= 'U') {
          if (yych <= 'Q') {
            if (yych <= 'N')
              goto yy13;
            if (yych <= 'O')
              goto yy14;
            if (yych <= 'P')
              goto yy15;
            goto yy27;
          } else {
            if (yych <= 'R')
              goto yy16;
            if (yych <= 'S')
              goto yy17;
            if (yych <= 'T')
              goto yy18;
            goto yy19;
          }
        } else {
          if (yych <= 'Y') {
            if (yych <= 'V')
              goto yy20;
            if (yych <= 'W')
              goto yy21;
            if (yych <= 'X')
              goto yy22;
            goto yy28;
          } else {
            if (yych <= '`') {
              if (yych <= 'Z')
                goto yy23;
              goto yy29;
            } else {
              if (yych <= 'a')
                goto yy6;
              if (yych <= 'b')
                goto yy24;
              goto yy3;
            }
          }
        }
      }
    } else {
      if (yych <= 't') {
        if (yych <= 'k') {
          if (yych <= 'g') {
            if (yych <= 'd')
              goto yy4;
            if (yych <= 'e')
              goto yy25;
            if (yych <= 'f')
              goto yy7;
            goto yy8;
          } else {
            if (yych <= 'h')
              goto yy9;
            if (yych <= 'i')
              goto yy10;
            if (yych <= 'j')
              goto yy5;
            goto yy26;
          }
        } else {
          if (yych <= 'o') {
            if (yych <= 'l')
              goto yy11;
            if (yych <= 'm')
              goto yy12;
            if (yych <= 'n')
              goto yy13;
            goto yy14;
          } else {
            if (yych <= 'q') {
              if (yych <= 'p')
                goto yy15;
              goto yy27;
            } else {
              if (yych <= 'r')
                goto yy16;
              if (yych <= 's')
                goto yy17;
              goto yy18;
            }
          }
        }
      } else {
        if (yych <= 0xC1) {
          if (yych <= 'x') {
            if (yych <= 'u')
              goto yy19;
            if (yych <= 'v')
              goto yy20;
            if (yych <= 'w')
              goto yy21;
            goto yy22;
          } else {
            if (yych <= 'y')
              goto yy28;
            if (yych <= 'z')
              goto yy23;
            if (yych <= 0x7F)
              goto yy29;
          }
        } else {
          if (yych <= 0xED) {
            if (yych <= 0xDF)
              goto yy30;
            if (yych <= 0xE0)
              goto yy32;
            if (yych <= 0xEC)
              goto yy33;
            goto yy37;
          } else {
            if (yych <= 0xF0) {
              if (yych <= 0xEF)
                goto yy33;
              goto yy34;
            } else {
              if (yych <= 0xF3)
                goto yy35;
              if (yych <= 0xF4)
                goto yy36;
            }
          }
        }
      }
    }
  yy2 : { return 0; }
  yy3:
    yych = *(marker = ++p);
    switch (yych) {
    case 'A':
    case 'a':
      goto yy447;
    case 'H':
    case 'h':
      goto yy446;
    case 'I':
    case 'i':
      goto yy449;
    case 'O':
    case 'o':
      goto yy445;
    case 'R':
    case 'r':
      goto yy448;
    case 'V':
    case 'v':
      goto yy444;
    default:
      goto yy2;
    }
  yy4:
    yych = *(marker = ++p);
    switch (yych) {
    case 'A':
    case 'a':
      goto yy420;
    case 'I':
    case 'i':
      goto yy419;
    case 'L':
    case 'l':
      goto yy417;
    case 'N':
    case 'n':
      goto yy418;
    case 'O':
    case 'o':
      goto yy421;
    case 'T':
    case 't':
      goto yy416;
    case 'V':
    case 'v':
      goto yy415;
    default:
      goto yy2;
    }
  yy5:
    yych = *(marker = ++p);
    if (yych <= 'M') {
      if (yych == 'A')
        goto yy407;
      if (yych <= 'L')
        goto yy2;
      goto yy406;
    } else {
      if (yych <= 'a') {
        if (yych <= '`')
          goto yy2;
        goto yy407;
      } else {
        if (yych == 'm')
          goto yy406;
        goto yy2;
      }
    }
  yy6:
    yych = *(marker = ++p);
    switch (yych) {
    case 'A':
    case 'a':
      goto yy388;
    case 'B':
    case 'b':
      goto yy387;
    case 'C':
    case 'c':
      goto yy386;
    case 'D':
    case 'd':
      goto yy385;
    case 'F':
    case 'f':
      goto yy384;
    case 'I':
    case 'i':
      goto yy383;
    case 'P':
    case 'p':
      goto yy382;
    case 'T':
    case 't':
      goto yy381;
    case 'W':
    case 'w':
      goto yy41;
    default:
      goto yy2;
    }
  yy7:
    yych = *(marker = ++p);
    if (yych <= 'T') {
      if (yych <= 'E') {
        if (yych == 'A')
          goto yy368;
        if (yych <= 'D')
          goto yy2;
        goto yy367;
      } else {
        if (yych == 'I')
          goto yy366;
        if (yych <= 'S')
          goto yy2;
        goto yy369;
      }
    } else {
      if (yych <= 'e') {
        if (yych == 'a')
          goto yy368;
        if (yych <= 'd')
          goto yy2;
        goto yy367;
      } else {
        if (yych <= 'i') {
          if (yych <= 'h')
            goto yy2;
          goto yy366;
        } else {
          if (yych == 't')
            goto yy369;
          goto yy2;
        }
      }
    }
  yy8:
    yych = *(marker = ++p);
    switch (yych) {
    case 'E':
    case 'e':
      goto yy351;
    case 'G':
    case 'g':
      goto yy41;
    case 'I':
    case 'i':
      goto yy349;
    case 'O':
    case 'o':
      goto yy350;
    case 'T':
    case 't':
      goto yy348;
    default:
      goto yy2;
    }
  yy9:
    yych = *(marker = ++p);
    if (yych <= 'S') {
      if (yych <= '3') {
        if (yych <= '2')
          goto yy2;
        goto yy344;
      } else {
        if (yych == 'C')
          goto yy342;
        goto yy2;
      }
    } else {
      if (yych <= 'c') {
        if (yych <= 'T')
          goto yy343;
        if (yych <= 'b')
          goto yy2;
        goto yy342;
      } else {
        if (yych == 't')
          goto yy343;
        goto yy2;
      }
    }
  yy10:
    yych = *(marker = ++p);
    switch (yych) {
    case 'A':
    case 'a':
      goto yy324;
    case 'C':
    case 'c':
      goto yy321;
    case 'M':
    case 'm':
      goto yy323;
    case 'N':
    case 'n':
      goto yy322;
    case 'P':
    case 'p':
      goto yy320;
    case 'R':
    case 'r':
      goto yy319;
    case 'T':
    case 't':
      goto yy318;
    default:
      goto yy2;
    }
  yy11:
    yych = *(marker = ++p);
    if (yych <= 'D') {
      if (yych == 'A')
        goto yy312;
      if (yych <= 'C')
        goto yy2;
      goto yy311;
    } else {
      if (yych <= 'a') {
        if (yych <= '`')
          goto yy2;
        goto yy312;
      } else {
        if (yych == 'd')
          goto yy311;
        goto yy2;
      }
    }
  yy12:
    yych = *(marker = ++p);
    switch (yych) {
    case 'A':
    case 'a':
      goto yy278;
    case 'E':
    case 'e':
      goto yy277;
    case 'I':
    case 'i':
      goto yy280;
    case 'M':
    case 'm':
      goto yy276;
    case 'S':
    case 's':
      goto yy275;
    case 'T':
    case 't':
      goto yy279;
    case 'U':
    case 'u':
      goto yy274;
    case 'V':
    case 'v':
      goto yy273;
    default:
      goto yy2;
    }
  yy13:
    yych = *(marker = ++p);
    switch (yych) {
    case 'E':
    case 'e':
      goto yy268;
    case 'F':
    case 'f':
      goto yy267;
    case 'I':
    case 'i':
      goto yy266;
    case 'N':
    case 'n':
      goto yy265;
    case 'O':
    case 'o':
      goto yy264;
    default:
      goto yy2;
    }
  yy14:
    yych = *(marker = ++p);
    if (yych <= 'P') {
      if (yych == 'I')
        goto yy250;
      if (yych <= 'O')
        goto yy2;
      goto yy251;
    } else {
      if (yych <= 'i') {
        if (yych <= 'h')
          goto yy2;
        goto yy250;
      } else {
        if (yych == 'p')
          goto yy251;
        goto yy2;
      }
    }
  yy15:
    yych = *(marker = ++p);
    if (yych <= 'S') {
      if (yych <= 'L') {
        if (yych == 'A')
          goto yy232;
        if (yych <= 'K')
          goto yy2;
        goto yy231;
      } else {
        if (yych <= 'O') {
          if (yych <= 'N')
            goto yy2;
          goto yy233;
        } else {
          if (yych <= 'Q')
            goto yy2;
          if (yych <= 'R')
            goto yy230;
          goto yy229;
        }
      }
    } else {
      if (yych <= 'n') {
        if (yych <= 'a') {
          if (yych <= '`')
            goto yy2;
          goto yy232;
        } else {
          if (yych == 'l')
            goto yy231;
          goto yy2;
        }
      } else {
        if (yych <= 'q') {
          if (yych <= 'o')
            goto yy233;
          goto yy2;
        } else {
          if (yych <= 'r')
            goto yy230;
          if (yych <= 's')
            goto yy229;
          goto yy2;
        }
      }
    }
  yy16:
    yych = *(marker = ++p);
    if (yych <= 'T') {
      if (yych <= 'L') {
        if (yych == 'E')
          goto yy219;
        goto yy2;
      } else {
        if (yych <= 'M')
          goto yy218;
        if (yych <= 'R')
          goto yy2;
        if (yych <= 'S')
          goto yy217;
        goto yy216;
      }
    } else {
      if (yych <= 'm') {
        if (yych == 'e')
          goto yy219;
        if (yych <= 'l')
          goto yy2;
        goto yy218;
      } else {
        if (yych <= 'r')
          goto yy2;
        if (yych <= 's')
          goto yy217;
        if (yych <= 't')
          goto yy216;
        goto yy2;
      }
    }
  yy17:
    yych = *(marker = ++p);
    switch (yych) {
    case 'E':
    case 'e':
      goto yy172;
    case 'F':
    case 'f':
      goto yy171;
    case 'G':
    case 'g':
      goto yy170;
    case 'H':
    case 'h':
      goto yy175;
    case 'I':
    case 'i':
      goto yy174;
    case 'K':
    case 'k':
      goto yy169;
    case 'M':
    case 'm':
      goto yy168;
    case 'N':
    case 'n':
      goto yy173;
    case 'O':
    case 'o':
      goto yy167;
    case 'P':
    case 'p':
      goto yy166;
    case 'S':
    case 's':
      goto yy165;
    case 'T':
    case 't':
      goto yy164;
    case 'V':
    case 'v':
      goto yy163;
    default:
      goto yy2;
    }
  yy18:
    yych = *(marker = ++p);
    switch (yych) {
    case 'A':
    case 'a':
      goto yy139;
    case 'E':
    case 'e':
      goto yy135;
    case 'F':
    case 'f':
      goto yy138;
    case 'H':
    case 'h':
      goto yy134;
    case 'I':
    case 'i':
      goto yy136;
    case 'N':
    case 'n':
      goto yy137;
    case 'V':
    case 'v':
      goto yy41;
    default:
      goto yy2;
    }
  yy19:
    yych = *(marker = ++p);
    if (yych <= 'T') {
      if (yych <= 'N') {
        if (yych == 'D')
          goto yy126;
        if (yych <= 'M')
          goto yy2;
        goto yy125;
      } else {
        if (yych == 'R')
          goto yy127;
        if (yych <= 'S')
          goto yy2;
        goto yy124;
      }
    } else {
      if (yych <= 'n') {
        if (yych == 'd')
          goto yy126;
        if (yych <= 'm')
          goto yy2;
        goto yy125;
      } else {
        if (yych <= 'r') {
          if (yych <= 'q')
            goto yy2;
          goto yy127;
        } else {
          if (yych == 't')
            goto yy124;
          goto yy2;
        }
      }
    }
  yy20:
    yych = *(marker = ++p);
    if (yych <= 'I') {
      if (yych == 'E')
        goto yy108;
      if (yych <= 'H')
        goto yy2;
      goto yy107;
    } else {
      if (yych <= 'e') {
        if (yych <= 'd')
          goto yy2;
        goto yy108;
      } else {
        if (yych == 'i')
          goto yy107;
        goto yy2;
      }
    }
  yy21:
    yych = *(marker = ++p);
    if (yych <= 'Y') {
      if (yych <= 'R') {
        if (yych == 'E')
          goto yy97;
        goto yy2;
      } else {
        if (yych <= 'S')
          goto yy98;
        if (yych <= 'T')
          goto yy96;
        if (yych <= 'X')
          goto yy2;
        goto yy95;
      }
    } else {
      if (yych <= 's') {
        if (yych == 'e')
          goto yy97;
        if (yych <= 'r')
          goto yy2;
        goto yy98;
      } else {
        if (yych <= 't')
          goto yy96;
        if (yych == 'y')
          goto yy95;
        goto yy2;
      }
    }
  yy22:
    yych = *(marker = ++p);
    if (yych <= 'R') {
      if (yych <= 'F') {
        if (yych == 'C')
          goto yy74;
        if (yych <= 'E')
          goto yy2;
        goto yy72;
      } else {
        if (yych == 'M')
          goto yy73;
        if (yych <= 'Q')
          goto yy2;
        goto yy71;
      }
    } else {
      if (yych <= 'f') {
        if (yych == 'c')
          goto yy74;
        if (yych <= 'e')
          goto yy2;
        goto yy72;
      } else {
        if (yych <= 'm') {
          if (yych <= 'l')
            goto yy2;
          goto yy73;
        } else {
          if (yych == 'r')
            goto yy71;
          goto yy2;
        }
      }
    }
  yy23:
    yych = *(marker = ++p);
    if (yych == '3')
      goto yy66;
    goto yy2;
  yy24:
    yych = *(marker = ++p);
    if (yych <= 'O') {
      if (yych <= 'H') {
        if (yych == 'E')
          goto yy56;
        goto yy2;
      } else {
        if (yych <= 'I')
          goto yy55;
        if (yych <= 'N')
          goto yy2;
        goto yy54;
      }
    } else {
      if (yych <= 'h') {
        if (yych == 'e')
          goto yy56;
        goto yy2;
      } else {
        if (yych <= 'i')
          goto yy55;
        if (yych == 'o')
          goto yy54;
        goto yy2;
      }
    }
  yy25:
    yych = *(marker = ++p);
    if (yych == 'D')
      goto yy52;
    if (yych == 'd')
      goto yy52;
    goto yy2;
  yy26:
    yych = *(marker = ++p);
    if (yych == 'E')
      goto yy47;
    if (yych == 'e')
      goto yy47;
    goto yy2;
  yy27:
    yych = *(marker = ++p);
    if (yych == 'U')
      goto yy44;
    if (yych == 'u')
      goto yy44;
    goto yy2;
  yy28:
    yych = *(marker = ++p);
    if (yych == 'M')
      goto yy38;
    if (yych == 'm')
      goto yy38;
    goto yy2;
  yy29:
    yych = *++p;
    goto yy2;
  yy30:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy31;
    if (yych <= 0xBF)
      goto yy29;
  yy31:
    p = marker;
    goto yy2;
  yy32:
    yych = *++p;
    if (yych <= 0x9F)
      goto yy31;
    if (yych <= 0xBF)
      goto yy30;
    goto yy31;
  yy33:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy31;
    if (yych <= 0xBF)
      goto yy30;
    goto yy31;
  yy34:
    yych = *++p;
    if (yych <= 0x8F)
      goto yy31;
    if (yych <= 0xBF)
      goto yy33;
    goto yy31;
  yy35:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy31;
    if (yych <= 0xBF)
      goto yy33;
    goto yy31;
  yy36:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy31;
    if (yych <= 0x8F)
      goto yy33;
    goto yy31;
  yy37:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy31;
    if (yych <= 0x9F)
      goto yy30;
    goto yy31;
  yy38:
    yych = *++p;
    if (yych == 'S')
      goto yy39;
    if (yych != 's')
      goto yy31;
  yy39:
    yych = *++p;
    if (yych == 'G')
      goto yy40;
    if (yych != 'g')
      goto yy31;
  yy40:
    yych = *++p;
    if (yych == 'R')
      goto yy41;
    if (yych != 'r')
      goto yy31;
  yy41:
    yych = *++p;
    if (yych != ':')
      goto yy31;
  yy42:
    ++p;
    { return (bufsize_t)(p - start); }
  yy44:
    yych = *++p;
    if (yych == 'E')
      goto yy45;
    if (yych != 'e')
      goto yy31;
  yy45:
    yych = *++p;
    if (yych == 'R')
      goto yy46;
    if (yych != 'r')
      goto yy31;
  yy46:
    yych = *++p;
    if (yych == 'Y')
      goto yy41;
    if (yych == 'y')
      goto yy41;
    goto yy31;
  yy47:
    yych = *++p;
    if (yych == 'Y')
      goto yy48;
    if (yych != 'y')
      goto yy31;
  yy48:
    yych = *++p;
    if (yych == 'P')
      goto yy49;
    if (yych != 'p')
      goto yy31;
  yy49:
    yych = *++p;
    if (yych == 'A')
      goto yy50;
    if (yych != 'a')
      goto yy31;
  yy50:
    yych = *++p;
    if (yych == 'R')
      goto yy51;
    if (yych != 'r')
      goto yy31;
  yy51:
    yych = *++p;
    if (yych == 'C')
      goto yy41;
    if (yych == 'c')
      goto yy41;
    goto yy31;
  yy52:
    yych = *++p;
    if (yych != '2')
      goto yy31;
    yych = *++p;
    if (yych == 'K')
      goto yy41;
    if (yych == 'k')
      goto yy41;
    goto yy31;
  yy54:
    yych = *++p;
    if (yych == 'L')
      goto yy65;
    if (yych == 'l')
      goto yy65;
    goto yy31;
  yy55:
    yych = *++p;
    if (yych == 'T')
      goto yy61;
    if (yych == 't')
      goto yy61;
    goto yy31;
  yy56:
    yych = *++p;
    if (yych == 'S')
      goto yy57;
    if (yych != 's')
      goto yy31;
  yy57:
    yych = *++p;
    if (yych == 'H')
      goto yy58;
    if (yych != 'h')
      goto yy31;
  yy58:
    yych = *++p;
    if (yych == 'A')
      goto yy59;
    if (yych != 'a')
      goto yy31;
  yy59:
    yych = *++p;
    if (yych == 'R')
      goto yy60;
    if (yych != 'r')
      goto yy31;
  yy60:
    yych = *++p;
    if (yych == 'E')
      goto yy41;
    if (yych == 'e')
      goto yy41;
    goto yy31;
  yy61:
    yych = *++p;
    if (yych == 'C')
      goto yy62;
    if (yych != 'c')
      goto yy31;
  yy62:
    yych = *++p;
    if (yych == 'O')
      goto yy63;
    if (yych != 'o')
      goto yy31;
  yy63:
    yych = *++p;
    if (yych == 'I')
      goto yy64;
    if (yych != 'i')
      goto yy31;
  yy64:
    yych = *++p;
    if (yych == 'N')
      goto yy41;
    if (yych == 'n')
      goto yy41;
    goto yy31;
  yy65:
    yych = *++p;
    if (yych == 'O')
      goto yy41;
    if (yych == 'o')
      goto yy41;
    goto yy31;
  yy66:
    yych = *++p;
    if (yych != '9')
      goto yy31;
    yych = *++p;
    if (yych != '.')
      goto yy31;
    yych = *++p;
    if (yych != '5')
      goto yy31;
    yych = *++p;
    if (yych != '0')
      goto yy31;
    yych = *++p;
    if (yych <= 'Q')
      goto yy31;
    if (yych <= 'S')
      goto yy41;
    if (yych <= 'q')
      goto yy31;
    if (yych <= 's')
      goto yy41;
    goto yy31;
  yy71:
    yych = *++p;
    if (yych == 'I')
      goto yy41;
    if (yych == 'i')
      goto yy41;
    goto yy31;
  yy72:
    yych = *++p;
    if (yych == 'I')
      goto yy93;
    if (yych == 'i')
      goto yy93;
    goto yy31;
  yy73:
    yych = *++p;
    if (yych <= 'P') {
      if (yych == 'L')
